Fix z-index of headline

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -75,7 +75,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  
+
   &__logo {
     &__text {
       color: $clr-primary-400;
@@ -94,6 +94,7 @@ p {
 .head::before {
   content: '';
   position: absolute;
+  background-color: $clr-neutral-100;
   background-image: url('https://raw.githubusercontent.com/ArthurGC/portfolio-microverse/add-set-up-mobile-version--portfolio/images/shapes.png');
   background-size: cover;
   background-position: center;
@@ -102,7 +103,7 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: -1;
 }
 
 .head {
@@ -112,6 +113,7 @@ p {
   position: relative;
   padding: 6rem 1.5rem;
   border-bottom-left-radius: 5rem;
+  z-index: 10;
 
   &__title {
     color: $clr-neutral-800;
